# Glacier-DLL

./: .gitignore  CMakeLists.txt  README.md  build.bat
.github/workflows/: build.yml  release.yml
src/: Client.cpp  Client.h  dllmain.cpp
src/config/: Config.cpp  Config.h
src/core/: Glacier.h  Logger.cpp  Logger.h  Util.cpp  Util.h
src/events/: Event.h  EventBus.cpp  EventBus.h  Events.h
src/gui/: ClickGui.cpp  ClickGui.h
src/hooks/: HookManager.cpp  HookManager.h  SwapChainHook.cpp  SwapChainHook.h
src/hooks/render/: SwapChainHook.cpp  SwapChainHook.h  WndProcHook.cpp  WndProcHook.h
src/icons/: IconManager.cpp  IconManager.h
src/modules/: Category.h  Module.cpp  Module.h  ModuleBase.h  ModuleManager.cpp  ModuleManager.h  ModuleSettings.cpp  ModuleSettings.h  Setting.cpp  Setting.h
src/modules/hud/: ArmorHUD.cpp  ArmorHUD.h  CPS.cpp  CPS.h  ClientBranding.cpp  ClientBranding.h  Coordinates.cpp  Coordinates.h  FPSCounter.cpp  FPSCounter.h  Keystrokes.cpp  Keystrokes.h  PlayerList.cpp  PlayerList.h  Watermark.cpp  Watermark.h
src/modules/impl/: ActiveModsList.cpp  ActiveModsList.h  ArmorHUD.cpp  ArmorHUD.h  AutoGG.cpp  AutoGG.h  AutoRespawn.cpp  AutoRespawn.h  AutoSprint.cpp  AutoSprint.h  BlockOutline.cpp  BlockOutline.h  CPSCounter.cpp  CPSCounter.h  ChunkBorders.cpp  ChunkBorders.h  ChunkMap.cpp  ChunkMap.h  ClickStatsDashboard.cpp  ClickStatsDashboard.h  Clock.cpp  Clock.h  ClockCompass.cpp  ClockCompass.h  ComboCounter.cpp  ComboCounter.h  CoordinatesHUD.cpp  CoordinatesHUD.h  Crosshair.cpp  Crosshair.h  EnvironmentChanger.cpp  EnvironmentChanger.h  FPSCounter.cpp  FPSCounter.h  FreeCam.cpp  FreeCam.h  FreeLook.cpp  FreeLook.h  FullBright.cpp  FullBright.h  (+42 more)
src/modules/misc/: AutoGG.cpp  AutoGG.h  AutoText.cpp  AutoText.h  TimeChanger.cpp  TimeChanger.h  ToggleSprintSneak.cpp  ToggleSprintSneak.h
src/modules/visual/: BlockOutline.cpp  BlockOutline.h  ChunkBorders.cpp  ChunkBorders.h  Crosshair.cpp  Crosshair.h  FreeLook.cpp  FreeLook.h  Fullbright.cpp  Fullbright.h  NoHurtCam.cpp  NoHurtCam.h  Zoom.cpp  Zoom.h
src/render/: DrawUtil.cpp  DrawUtil.h  Fonts.cpp  Fonts.h  HUDStyle.h  ModMenu.cpp  ModMenu.h  Renderer.cpp  Renderer.h  Theme.cpp  Theme.h
src/sdk/: Addresses.cpp  Addresses.h  ClientInstance.h  SDK.h
src/sdk/client/: Game.cpp  Game.h  GameTypes.h
src/sdk/math/: Color.h  Vec2.h  Vec3.h  Vec4.h
src/utils/: ClientConfig.h  Logger.cpp  Logger.h  SigScanner.cpp  SigScanner.h
