cmake_minimum_required(VERSION 3.20)
project(GlacierClient LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(NOT CMAKE_SIZEOF_VOID_P EQUAL 8)
    message(FATAL_ERROR "Glacier Client requires x64 compilation.")
endif()
if(NOT WIN32)
    message(FATAL_ERROR "Glacier Client is Windows-only.")
endif()

# ── Version (overridable from CI) ──────────────────────────────────────────────
set(GLACIER_VERSION "1.0.0" CACHE STRING "Glacier Client version string")

include(FetchContent)

# ── MinHook ────────────────────────────────────────────────────────────────────
FetchContent_Declare(minhook
    GIT_REPOSITORY https://github.com/TsudaKageyu/minhook.git
    GIT_TAG        master)
FetchContent_MakeAvailable(minhook)

# ── ImGui ──────────────────────────────────────────────────────────────────────
FetchContent_Declare(imgui
    GIT_REPOSITORY https://github.com/ocornut/imgui.git
    GIT_TAG        v1.91.0)
FetchContent_MakeAvailable(imgui)

set(IMGUI_SOURCES
    ${imgui_SOURCE_DIR}/imgui.cpp
    ${imgui_SOURCE_DIR}/imgui_draw.cpp
    ${imgui_SOURCE_DIR}/imgui_tables.cpp
    ${imgui_SOURCE_DIR}/imgui_widgets.cpp
    ${imgui_SOURCE_DIR}/backends/imgui_impl_dx11.cpp
    ${imgui_SOURCE_DIR}/backends/imgui_impl_win32.cpp)

# ── IconFontCppHeaders (still used for FA5 glyphs in some overlay text) ────────
FetchContent_Declare(iconfontcppheaders
    GIT_REPOSITORY https://github.com/juliettef/IconFontCppHeaders.git
    GIT_TAG        main)
FetchContent_MakeAvailable(iconfontcppheaders)

# ── Embed Font Awesome 5 Solid as a compiled-in byte array ────────────────────
# Download the TTF at configure time, then generate a C header from its bytes.
# At runtime the font is loaded from memory — no external .ttf file needed.
set(FA_TTF "${CMAKE_BINARY_DIR}/fa-solid-900.ttf")
set(FA_HEADER "${CMAKE_BINARY_DIR}/generated/fa_solid_900_embedded.h")

if(NOT EXISTS "${FA_TTF}")
    message(STATUS "[Glacier] Downloading Font Awesome 5 Solid …")
    file(DOWNLOAD
        "https://github.com/FortAwesome/Font-Awesome/raw/5.x/webfonts/fa-solid-900.ttf"
        "${FA_TTF}" STATUS fa_status SHOW_PROGRESS)
    list(GET fa_status 0 fa_code)
    if(NOT fa_code EQUAL 0)
        message(WARNING "[Glacier] FA font download failed — icons will be missing.")
    endif()
endif()

if(EXISTS "${FA_TTF}")
    file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/generated")
    file(READ "${FA_TTF}" FA_HEX HEX)
    string(LENGTH "${FA_HEX}" FA_HEX_LEN)
    math(EXPR FA_SIZE "${FA_HEX_LEN} / 2")
    # Convert hex pairs into 0xNN, format wrapped every 16 bytes
    string(REGEX REPLACE "([0-9a-f][0-9a-f])" "0x\\1," FA_ARRAY "${FA_HEX}")
    file(WRITE "${FA_HEADER}"
        "// Auto-generated by CMake — Font Awesome 5 Solid (fa-solid-900.ttf)\n"
        "// Do NOT edit — regenerated each time CMake configures.\n"
        "#pragma once\n"
        "#include <cstddef>\n\n"
        "static const unsigned char fa_solid_900_ttf[] = {\n${FA_ARRAY}\n};\n\n"
        "static const size_t fa_solid_900_ttf_size = ${FA_SIZE};\n")
    message(STATUS "[Glacier] Embedded FA font: ${FA_SIZE} bytes → ${FA_HEADER}")
else()
    # Generate a stub header so compilation doesn't fail
    file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/generated")
    file(WRITE "${FA_HEADER}"
        "// Auto-generated STUB — Font Awesome download failed.\n"
        "#pragma once\n"
        "#include <cstddef>\n\n"
        "static const unsigned char fa_solid_900_ttf[] = {};\n"
        "static const size_t fa_solid_900_ttf_size = 0;\n")
    message(WARNING "[Glacier] FA font not available — stub header generated.")
endif()

# ── Collect all sources (GLOB_RECURSE picks up new modules automatically) ──────
file(GLOB_RECURSE CLIENT_SOURCES "src/*.cpp")

add_library(GlacierClient SHARED
    ${CLIENT_SOURCES}
    ${IMGUI_SOURCES})

target_include_directories(GlacierClient PRIVATE
    src/
    ${imgui_SOURCE_DIR}
    ${imgui_SOURCE_DIR}/backends
    ${iconfontcppheaders_SOURCE_DIR}
    ${CMAKE_BINARY_DIR}/generated)

target_link_libraries(GlacierClient PRIVATE
    minhook
    d3d11
    dxgi
    d3dcompiler
    windowscodecs          # WIC — for PNG icon loading
    Psapi                  # Process memory info (SessionInfo)
    Winmm)                 # Multimedia timers

target_compile_definitions(GlacierClient PRIVATE
    WIN32_LEAN_AND_MEAN
    NOMINMAX
    UNICODE
    _UNICODE
    _CRT_SECURE_NO_WARNINGS
    GLACIER_VERSION="${GLACIER_VERSION}")

target_compile_options(GlacierClient PRIVATE
    $<$<CXX_COMPILER_ID:MSVC>:/W3 /MP /permissive->
    $<$<CXX_COMPILER_ID:MSVC>:/wd4100 /wd4189 /wd4244>)

set_target_properties(GlacierClient PROPERTIES
    OUTPUT_NAME "glacier"
    SUFFIX      ".dll")

# ── Post-build: create icons/modules/ directory next to DLL ───────────────────
add_custom_command(TARGET GlacierClient POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E make_directory
        "$<TARGET_FILE_DIR:GlacierClient>/icons/modules"
    COMMENT "[Glacier] Creating icons/modules directory...")

message(STATUS "
  ┌──────────────────────────────────────────────┐
  │  Glacier Client v${GLACIER_VERSION}                       │
  │                                              │
  │  Build:                                      │
  │    cmake -B build -A x64                     │
  │    cmake --build build --config Release      │
  │                                              │
  │  Output: build/Release/glacier.dll           │
  │                                              │
  │  Font Awesome: embedded in DLL (no external  │
  │    .ttf file needed)                         │
  │                                              │
  │  Icons: place <name>.png files in            │
  │    <dll_dir>/icons/modules/                  │
  │  e.g. armorhud.png, fpscounter.png, ...      │
  └──────────────────────────────────────────────┘
")
